# microOrderService

./: pyproject.toml
src/adapters/repositories/: model.py  order_repository.py
src/config/: logging_config.py
src/core/domain/: order.py
src/core/ports/: order_serviec.py
src/core/service/: order_service.py
src/ports/outgoing/: order_repository_port.py
src/proto/: order.proto
test/domain/unit/: test_order_aggregate.py  test_order_line.py
